examples/test/testpolicy18811.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18811
  namespace: namespace107
spec:
  podSelector:
    matchLabels:
      key31: value15
      key44: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value12
          key30: value16
          key40: value14
      podSelector:
        matchLabels:
          key34: value27
          key40: value4
